Introduce LabelContext